# AkaGame

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
asset/levels/: level0.json  level1.json  level2.json  level3.json  world.ogmo
asset/logo/: aka.psd
asset/shaders/: shaders.json  sprite.frag  world.frag
asset/shaders/renderer/: sprite.frag  sprite.vert  tilemap.frag  tilemap.vert
asset/textures/atlas/: atlas.aseprite
asset/textures/collider/: collider.aseprite
asset/textures/icon/: icon.aseprite
asset/textures/interact/: interact.aseprite
asset/textures/player/: player.aseprite
asset/textures/spikes/: spikes.aseprite
src/: EditorApp.cpp  EditorApp.h  GameApp.cpp  GameApp.h  Shaders.h  main.cpp
src/Component/: Animator.cpp  Animator.h  Camera2D.h  Coin.h  Collider2D.cpp  Collider2D.h  Door.h  Hurtable.h  Particle.h  Player.h  SoundInstance.h  Sprite.h  SpriteAnimator.cpp  SpriteAnimator.h  Text.h  TileLayer.h  TileMap.h  Transform2D.cpp  Transform2D.h
src/GUI/: EditorUI.cpp  EditorUI.h  EntityWidget.cpp  EntityWidget.h  GUINode.cpp  GUINode.h  InfoWidget.cpp  InfoWidget.h  MenuWidget.cpp  MenuWidget.h  Modal.cpp  Modal.h  ResourcesWidget.cpp  ResourcesWidget.h  ViewWidget.cpp  ViewWidget.h
src/Game/: Game.cpp  Game.h  Level.cpp  Level.h  OgmoWorld.cpp  OgmoWorld.h  Resources.cpp  Resources.h
src/Game/Views/: EndView.cpp  EndView.h  GameView.cpp  GameView.h  IntroView.cpp  IntroView.h  MenuView.cpp  MenuView.h
src/System/: AnimatorSystem.cpp  AnimatorSystem.h  CameraSystem.cpp  CameraSystem.h  CoinSystem.cpp  CoinSystem.h  CollisionSystem.cpp  CollisionSystem.h  LevelSystem.cpp  LevelSystem.h  ParticleSystem.cpp  ParticleSystem.h  PhysicSystem.cpp  PhysicSystem.h  PlayerSystem.cpp  PlayerSystem.h  RenderSystem.cpp  RenderSystem.h  SoundSystem.cpp  SoundSystem.h  SpriteAnimatorSystem.cpp  SpriteAnimatorSystem.h  SpriteRenderSystem.cpp  SpriteRenderSystem.h  TextRenderSystem.cpp  TextRenderSystem.h  TileMapRenderSystem.cpp  TileMapRenderSystem.h  TileMapSystem.cpp  TileMapSystem.h  TileRenderSystem.cpp  TileRenderSystem.h
